# sven

./: README.md
sven/sven-0.4.3.3/: Makefile.am  Makefile.in  NEWS  aclocal.m4  authors  config.h.in  config.status  configure  configure.in  sven.pc.in
sven/sven-0.4.3.3/data/: Makefile.in  en.cor  key_config  mouse_config  ru.cor  sven.desktop.in  utf.conv
sven/sven-0.4.3.3/images/: Makefile  sven.xpm  sven_icons.h
sven/sven-0.4.3.3/images/flag/: Makefile  sven_flags.h
sven/sven-0.4.3.3/libsven/: Makefile.am  Makefile.in  about.c  about.h  cdpl.c  cdpl.h  clipman.c  clipman.h  confcorrect.c  confcorrect.h  confdevice.c  confdevice.h  configany.c  configany.h  configfile.c  configfile.h  configplugin.c  configplugin.h  configxosd.c  configxosd.h  confswitch.c  confswitch.h  endict.h  grabkeyboard.c  grabkeyboard.h  key.c  key.h  load_symbol.c  load_symbol.h  mixer.c  mixer.h  mouse.c  mouse.h  plugin.c  plugin.h  prefswin.c  prefswin.h  rudict.h  sven.h  sxkb.c  (+8 more)
sven/sven-0.4.3.3/plugins/: Makefile.in
sven/sven-0.4.3.3/plugins/time/: Makefile  time.c
sven/sven-0.4.3.3/po/: Makefile.in  POTFILES.in  ru.po
sven/sven-0.4.3.3/script/: Makefile.in
sven/sven-0.4.3.3/sven/: Makefile.am  Makefile.in  sven.c
sven/sven-0.4.3.3/utils/: Makefile  sven-font.c
sven/sven-0.6/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in
sven/sven-0.6/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sven/sven-0.6/data/: Makefile.in  key_config  mouse_config
sven/sven-0.6/images/: Makefile  sven_icons.h
sven/sven-0.6/libsven/: Makefile.am  Makefile.in  config.h.in  configfile.c  configfile.h  emulate_input.c  emulate_input.h  grabkeyboard.c  grabkeyboard.h  gtkosd.c  gtkosd.h  key.c  key.h  mouse.c  mouse.h  pixmap.c  pixmap.h  plugin.c  plugin.h  sven.h  trayicon.c  trayicon.h  utils.c  utils.h  xlib.c  xlib.h
sven/sven-0.6/libsven/pref/: about.c  about.h  confdevice.c  confdevice.h  configplugin.c  configplugin.h  configxosd.c  configxosd.h  prefswin.c  prefswin.h
sven/sven-0.6/plugins/: Makefile.am  Makefile.in
sven/sven-0.6/plugins/autoconvert/: Makefile  autoconvert.c  autoconvert.h  configure.c  configure.h  convert.c  convert.h  endict.h  flag.c  flag.h  glist.c  glist.h  keyboard.c  keyboard.h  rudict.h  sxkb.c  sxkb.h  wlist.c  wlist.h  xutil.c  xutil.h
sven/sven-0.6/plugins/autoconvert/flag/: sven_flags.h
sven/sven-0.6/plugins/cdrom/: Makefile  cdpl.c  cdpl.h  cdrom.c
sven/sven-0.6/plugins/mixer/: Makefile  mixer.c
sven/sven-0.6/plugins/player/: Makefile  player.c
sven/sven-0.6/plugins/www/: Makefile  www.c
sven/sven-0.6/po/: POTFILES.in  ru.gmo  ru.po
sven/sven-0.6/script/: Makefile.am  Makefile.in  sven-config.in
sven/sven-0.6/sven/: Makefile.am  Makefile.in  sven.c
